--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
             </div>
             <div class="rating">
               <span id="rating">
-                <input type="radio" name="rating" id="star1">
+                <input type="radio" name="rating1" id="star1">
                 <label for="star1"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star2">
+                <input type="radio" name="rating1" id="star2">
                 <label for="star2"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star3">
+                <input type="radio" name="rating1" id="star3">
                 <label for="star3"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star4">
+                <input type="radio" name="rating1" id="star4">
                 <label for="star4"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star5">
+                <input type="radio" name="rating1" id="star5">
                 <label for="star5"><i class="fas fa-paw"></i></label>
               </span>
             </div>
@@ -152,16 +152,16 @@
             </div>
             <div class="rating">
               <span id="rating">
-                <input type="radio" name="rating" id="star1">
-                <label for="star1"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star2">
-                <label for="star2"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star3">
-                <label for="star3"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star4">
-                <label for="star4"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star5">
-                <label for="star5"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating2" id="star6">
+                <label for="star6"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating2" id="star7">
+                <label for="star7"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating2" id="star8">
+                <label for="star8"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating2" id="star9">
+                <label for="star9"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating2" id="star10">
+                <label for="star10"><i class="fas fa-paw"></i></label>
               </span>
             </div>
           </div>
@@ -176,16 +176,16 @@
             </div>
             <div class="rating">
               <span id="rating">
-                <input type="radio" name="rating" id="star1">
-                <label for="star1"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star2">
-                <label for="star2"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star3">
-                <label for="star3"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star4">
-                <label for="star4"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star5">
-                <label for="star5"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating3" id="star11">
+                <label for="star11"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating3" id="star12">
+                <label for="star12"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating3" id="star13">
+                <label for="star13"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating3" id="star14">
+                <label for="star14"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating3" id="star15">
+                <label for="star15"><i class="fas fa-paw"></i></label>
               </span>
             </div>
           </div>
@@ -194,22 +194,22 @@
               <img src="src/img/new4.png" alt="new-products">
             </div>
             <div class="info-product">
-              <h2 class="title-product">Manta Refrigerante</h2>
-              <p>18€</p>
+              <h2 class="title-product">Trasportin</h2>
+              <p>65€</p>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, doloribus.</p>
             </div>
             <div class="rating">
               <span id="rating">
-                <input type="radio" name="rating" id="star1">
-                <label for="star1"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star2">
-                <label for="star2"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star3">
-                <label for="star3"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star4">
-                <label for="star4"><i class="fas fa-paw"></i></label>
-                <input type="radio" name="rating" id="star5">
-                <label for="star5"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating4" id="star16">
+                <label for="star16"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating4" id="star17">
+                <label for="star17"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating4" id="star18">
+                <label for="star18"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating4" id="star19">
+                <label for="star19"><i class="fas fa-paw"></i></label>
+                <input type="radio" name="rating4" id="star20">
+                <label for="star20"><i class="fas fa-paw"></i></label>
               </span>
             </div>
           </div>
