--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="src/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Pacifico&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/2e9cad6e92.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="src/img/icon-top.ico" type="image/x-icon">
   <title>MICHU'S Pet Shop</title>
 </head>
 <body>
