--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <div class="top">
+    <div class="banner-top">
       <div class="info-shop">
         <div class="address">
           <i class="fas fa-map-marker-alt"></i>
@@ -32,10 +32,9 @@
       <div class="logo">
         <div class="logo-img">
           <a href="index.html">
-          <img src="src/img/icon.png" alt="icon">
-        </a>
+            <img src="src/img/icon.png" alt="icon">
+          </a>
         </div>
-        
       </div>
       <nav class="menu">
         <a href="#">Delivery y Método de Pago</a>
@@ -51,14 +50,15 @@
   <div class="cont">
     <div class="about">
       <div class="gallery">
-        <div class="gallery-controlls">
-          <i class="fas fa-arrow-circle-left"></i>
-        </div>
-        <div class="gallery-img">
-          <img src="src/img/logo.jpg" alt="logo_complete">
-        </div>
-        <div class="gallery-controlls">
-          <i class="fas fa-arrow-circle-right"></i>
+        <div class="scene">
+          <div class="cube">
+            <div class="side back"></div>
+            <div class="side left"></div>
+            <div class="side right"></div>
+            <div class="side top"></div>
+            <div class="side bottom"></div>
+            <div class="side front"></div>
+          </div>
         </div>
       </div>
       <div class="info-about">
