enlace de paginas

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     <nav class="menu">
       <a href="#catalog">Catálogo</a>
-      <a href="#">Delivery y Método de Pago</a>
+      <a href="src/html/pay.html">Delivery y Método de Pago</a>
       <a href="#">Consejos</a>
       <a href="#">Contacto</a>
     </nav>
