--- a/index.html
+++ b/index.html
@@ -42,20 +42,16 @@
       </div>
     </div>
   </header>
-  <div class="container">
-    <div class="hamburger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </div>
-    <nav class="menu">
-      <a href="#catalog">Catálogo</a>
-      <a href="src/html/pay.html">Delivery y Método de Pago</a>
-      <a href="#">Consejos</a>
-      <a href="#">Contacto</a>
-    </nav>
-  </div>
+  <nav class="menu-options">
+    <input type="checkbox" id="ckbox">
+    <label for="ckbox" class="selector"><i class="fa fa-bars" aria-hidden="true"></i></label>
+    <ul class="menu-box">
+      <li><a href="#catalog">Catálogo</a></li>
+      <li><a href="src/html/infoPay.html">Delivery y Método de Pago</a></li>
+      <li><a href="#">Consejos</a></li>
+      <li><a href="#">Contacto</a></li>
+    </ul> 
+  </nav>
   <div class="cont">
     <div class="about">
       <div class="gallery">
