--- a/src/html/tips.html
+++ b/src/html/tips.html
@@ -42,20 +42,17 @@
       </div>
     </div>
   </header>
-  <div class="container">
-    <div class="hamburger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </div>
-    <nav class="menu">
-      <a href="pay.html">Delivery y Método de Pago</a>
-      <a href="#">Consejos</a>
-      <a href="#">Contacto</a>
-    </nav>
-  </div>
+  <nav class="menu-options">
+    <input type="checkbox" id="ckbox">
+    <label for="ckbox" class="selector"><i class="fa fa-bars" aria-hidden="true"></i></label>
+    <ul class="menu-box">
+      <li><a href="infoPay.html">Delivery y Método de Pago</a></li>
+      <li><a href="tips.html">Consejos</a></li>
+      <li><a href="contact.html">Contacto</a></li>
+    </ul> 
+  </nav>
   <div class="cont">
-    
+
   </div>
   <footer>
     <nav class="social-bar">
