pagina de contacto

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <ul class="menu-box">
       <li><a href="#catalog">Catálogo</a></li>
       <li><a href="src/html/infoPay.html">Delivery y Método de Pago</a></li>
-      <li><a href="#">Consejos</a></li>
-      <li><a href="#">Contacto</a></li>
+      <li><a href="src/html/tips.html">Consejos</a></li>
+      <li><a href="src/html/contact.html">Contacto</a></li>
     </ul> 
   </nav>
   <div class="cont">
@@ -85,7 +85,7 @@
             </a>
           </div>
           <div class="category" id="cat">
-            <a href="#">
+            <a href="src/html/catalog.html">Catálogo</a></li>">
               <div class="category-img">
                 <img src="src/img/Cat.png" alt="cat">
               </div>
@@ -95,7 +95,7 @@
         </div>
         <div class="categories-row">
           <div class="category" id="accs">
-            <a href="#">
+            <a href="src/html/catalog.html">
               <div class="category-img">
                 <img src="src/img/accessories.png" alt="accessories">
               </div>
@@ -103,7 +103,7 @@
             </a>
           </div>
           <div class="category" id="shower">
-            <a href="#">
+            <a href="src/html/catalog.html">
               <div class="category-img">
                 <img src="src/img/shower-pet.png" alt="shower">
               </div>
@@ -111,7 +111,7 @@
             </a>
           </div>
           <div class="category" id="health">
-            <a href="#">
+            <a href="src/html/catalog.html">
               <div class="category-img">
                 <img src="src/img/health.png" alt="health">
               </div>
@@ -130,7 +130,7 @@
               </div>
               <div class="info-product">
                 <h2 class="title-product">Mochila de Paseo</h2>
-                <p>14.99$</p>
+                <p title="62.371.633,49 Bs">14.99$</p>
               </div>
               <div class="rating">
                 <span id="rating">
