diseño consejos sobre mascotas

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <label for="ckbox" class="selector"><i class="fa fa-bars" aria-hidden="true"></i></label>
     <ul class="menu-box">
       <li><a href="#catalog">Catálogo</a></li>
-      <li><a href="src/html/infoPay.html">Delivery y Método de Pago</a></li>
+      <li><a href="src/html/infoPay.html">Delivery y Pago</a></li>
       <li><a href="src/html/tips.html">Consejos</a></li>
       <li><a href="src/html/contact.html">Contacto</a></li>
     </ul> 
@@ -85,7 +85,7 @@
             </a>
           </div>
           <div class="category" id="cat">
-            <a href="src/html/catalog.html">Catálogo</a></li>">
+            <a href="src/html/catalog.html">
               <div class="category-img">
                 <img src="src/img/Cat.png" alt="cat">
               </div>
