--- a/src/html/tips.html
+++ b/src/html/tips.html
@@ -47,13 +47,119 @@
     <label for="ckbox" class="selector"><i class="fa fa-bars" aria-hidden="true"></i></label>
     <ul class="menu-box">
       <li><a href="catalog.html">Catálogo</a></li>
-      <li><a href="infoPay.html">Delivery y Método de Pago</a></li>
+      <li><a href="infoPay.html">Delivery y Pago</a></li>
       <li><a href="tips.html">Consejos</a></li>
       <li><a href="contact.html">Contacto</a></li>
     </ul> 
   </nav>
   <div class="cont">
-
+    <h1 class="title">Nuestros Consejos Sobre Mascotas</h1>
+    <div class="tips">
+      <div class="tip">
+        <div class="tip-img">
+          <img src="../img/dog-tip1.png" alt="dog-tip1">
+        </div>
+        <div class="tip-info">
+          <p>
+            No todas las galletas son malas para los perros, por lo que podríamos decir que sí, los perros pueden comer galletas, pero no cualquiera.
+          </p>
+          <p>
+            En primer lugar, suelen contener una cantidad muy elevada de azúcar. Hay que recordar que tanto el azúcar como la sal no pueden formar parte de la dieta canina. Pero es que las galletas que prescinden del azúcar y lo sustituyen por edulcorantes, como el xilitol, también pueden resultar tóxicas para los perros. Otros ingredientes habituales en las galletas, como el chocolate, las uvas, las pasas o algunos frutos secos, ingeridos en cantidad suficiente pueden provocar intoxicaciones de consideración. Además, no debemos olvidar que las galletas que encontramos en nuestra despensa están pensadas para las personas y no para nuestros peludos.
+          </p>
+          <p>
+            Si quieres consentirlos recuerda comprarles galletas especiales para perros, que además de ser deliciosas son nutritivas y naturales.
+          </p>
+        </div>
+      </div>
+      <div class="tip">
+        <div class="tip-info">
+          <p>
+            Resulta que las cajas reducen el estrés de los gatos, enriquecen su entorno, les anima a jugar, les ayudan a calentarse y mejoran las relaciones con otros felinos con los que comparten la vida.
+          </p>
+          <p>
+            De hecho, si unimos todas las evidencias, los gatos no solo adoran las cajas: resulta, además, que las necesitan.⁣
+          </p>
+          ⁣<p>
+            ¿Tu gato también siente atracción gravitatoria por las cajas?
+          </p>
+        </div>
+        <div class="tip-img">
+          <img src="../img/cat-tip1.png" alt="cat-tip1">
+        </div>
+      </div>
+      <div class="tip">
+        <div class="tip-img">
+          <img src="../img/dog-tip2.png" alt="dog-tip2">
+        </div>
+        <div class="tip-info">
+          <p>
+            Siempre deseamos la felicidad máxima de nuestro peludo. Pero ¿cómo saber si tu perro es feliz? Además de mover sin parar la cola, los peludos tienen otras formas de transmitir sus emociones, como a través de las posturas. Eso sí, es importante aclarar que la felicidad no solo se refleja con el éxtasis del momento, sino también con la calma y bienestar. Por eso, en esta oportunidad te mostraremos algunas posturas de un perro feliz para que aprendas a conocer un poco mejor a tu compañero de vida.
+          </p>
+          <ul>
+            <li><i class="fas fa-check-circle"></i> Invitación al juego</li>
+            <li><i class="fas fa-check-circle"></i> Se apoya en ti</li>
+            <li><i class="fas fa-check-circle"></i> Se revuelca en el césped</li>
+            <li><i class="fas fa-check-circle"></i> Tu perro se tumba de lado</li>
+            <li><i class="fas fa-check-circle"></i> Excitación por salir a pasear</li>
+            <li><i class="fas fa-check-circle"></i> Tumbado boca arriba</li>
+            <li><i class="fas fa-check-circle"></i> Tu perro sonríe</li>
+            <li><i class="fas fa-check-circle"></i> Se tumba contigo</li>
+            <li><i class="fas fa-check-circle"></i> Se detiene en medio del juego</li>
+            <li><i class="fas fa-check-circle"></i> Postura de acecho durante el juego</li>
+            <li><i class="fas fa-check-circle"></i> Postura erguida</li>
+          </ul>
+        </div>
+      </div>
+      <div class="tip">
+        <div class="tip-info">
+          <p>
+            Elegir una arena adecuada para tu Michi a veces no es tarea fácil, en el mercado existen muchísimos tipos de arenas están las perfumadas y las de olor natural, elige la que sea más adecuada para tu gatito, Tú lo conoces mejor que nadie. Quizás a ti te guste la perfumada Pero a él no y eso causará que no use su arenero
+          </p>
+          <p>
+            También están las que son tipo piedritas textura más gruesa y las que son tipo arenilla muy parecido a la arena de la playa.
+          </p>
+          <p>
+            Piensa en tu Michi, en lo que hace cuando tapa su arenero, quizás una de ellas le resulte más agradable que otra. Si no sabes qué arena comprarle a tu gato, te recomendamos que compre los paquetes pequeños de 5 kg o menos.
+          </p>
+        </div>
+        <div class="tip-img">
+          <img src="../img/cat-tip2.png" alt="cat-tip2">
+        </div>
+      </div>
+      <div class="tip">
+        <div class="tip-img">
+          <img src="../img/dog-tip3.png" alt="dog-tip3">
+        </div>
+        <div class="tip-info">
+          <p>
+            La esterilización de perros, aunque es una práctica habitual, sigue siendo controvertida para algunos cuidadores, especialmente en el caso de los machos.
+          </p>
+          <p>
+            La recomendación actual es esterilizar antes del primer año de vida, una vez el perro ha concluido su crecimiento, independientemente de si vive en una finca con posibilidades de escapar o en un piso en plena ciudad. De hecho, esterilizar a nuestro perro forma parte de una tenencia responsable tanto para evitar que la población canina siga creciendo descontrolada como para obtener beneficios en cuanto a su salud se refiere.
+          </p>
+          <p>
+            La operación es sencilla y consiste en realizar una pequeña incisión por la que se extraen ambos testículos, por supuesto con el perro anestesiado. Nada más despierte por completo podrá volver a casa y hacer vida normal.
+          </p>
+        </div>
+      </div>
+      <div class="tip">
+        <div class="tip-info">
+          <p>
+            La esterilización de gatos es una intervención sencilla y rápida que consiste en la extirpación de los testículos. Se realiza mediante una mínima incisión en ellos, por supuesto, con el gato anestesiado. Además, apenas va a requerir control postoperatorio.
+          </p>
+          <p>
+            En cuanto a la edad para esterilizar a un gato macho, lo cierto es que puede hacerse cuando el gato aún es cachorro y, de hecho, se recomienda una intervención temprana, aproximadamente a los cinco meses, porque así evitamos que muestre los signos típicos de la madurez sexual al detectar gatas en celo.
+          </p>
+          <p>
+            Cuando hablamos de esterilizar a una gata, la intervención que se realiza de forma más frecuente consiste en la extracción del útero y de los ovarios a través de una incisión abdominal, por supuesto, tras administrar anestesia. Para esterilizar una gata callejera a veces se realiza un corte lateral y se extirpan solo los ovarios. Se considera que así se cumple el objetivo de evitar el ciclo reproductivo y el postoperatorio presenta un menor riesgo de complicaciones, lo que es muy importante si la gata va a volver de inmediato a la calle. Aún así, incluso con incisión abdominal, la recuperación no suele ofrecer problemas. Al despertar de la anestesia, la gata ya puede volver a casa a recuperarse, pues no se necesita ingreso.
+          </p>
+        </div>
+        <div class="tip-img">
+          <img src="../img/cat-tip3.png" alt="cat-tip3">
+        </div>
+      </div>
+    </div>
+    </div>
   </div>
   <footer>
     <nav class="social-bar">
