--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -47,14 +47,14 @@
     <label for="ckbox" class="selector"><i class="fa fa-bars" aria-hidden="true"></i></label>
     <ul class="menu-box">
       <li><a href="catalog.html">Catálogo</a></li>
-      <li><a href="infoPay.html">Delivery y Método de Pago</a></li>
+      <li><a href="infoPay.html">Delivery y Pago</a></li>
       <li><a href="tips.html">Consejos</a></li>
       <li><a href="contact.html">Contacto</a></li>
     </ul> 
   </nav>
   <div class="cont">
+    <h1 class="title">Contacta con Nosotros</h1>
     <div id="contact">
-      <h1 class="title">Contacta con Nosotros</h1>
       <div class='wrapper'>
         <div class='company-info'>
           <ul class="info-empresa">
