--- a/src/html/infoPay.html
+++ b/src/html/infoPay.html
@@ -47,13 +47,13 @@
     <label for="ckbox" class="selector"><i class="fa fa-bars" aria-hidden="true"></i></label>
     <ul class="menu-box">
       <li><a href="catalog.html">Catálogo</a></li>
-      <li><a href="infoPay.html">Delivery y Método de Pago</a></li>
+      <li><a href="infoPay.html">Delivery y Pago</a></li>
       <li><a href="tips.html">Consejos</a></li>
       <li><a href="contact.html">Contacto</a></li>
     </ul> 
   </nav>
   <div class="cont">
-
+    
   </div>
   <footer>
     <nav class="social-bar">
