--- a/src/html/infoPay.html
+++ b/src/html/infoPay.html
@@ -53,7 +53,89 @@
     </ul> 
   </nav>
   <div class="cont">
-    
+    <div class="pays">
+      <h1 class="title">Métodos de Pago</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit rerum ea eligendi veritatis doloremque velit, ipsum hic esse fuga. Inventore facilis soluta doloribus nulla, qui ex consequatur nesciunt veritatis repellat quos voluptatibus dolorum vel consectetur ea molestias incidunt omnis labore veniam. Veniam hic odio necessitatibus praesentium nostrum vitae recusandae quam repellendus officiis corporis vero illum libero, sequi dolor perspiciatis cupiditate inventore tempora natus. Autem asperiores fugit maxime numquam ipsa accusantium mollitia earum, iure quis iste, enim soluta! Vel, natus dolorem totam nisi eius magni! Blanditiis omnis minima voluptatibus, tempore corrupti cumque reprehenderit autem distinctio aperiam. Sit iste veniam eum error!
+      </p>
+      <div class="payments-methods">
+        <div class="payments-row">
+          <div class="payments-cont">
+            <div class="pay" id="dollar">
+              <img src="../img/dollar.svg" alt="dollar">
+            </div>
+            <div class="pay" id="paypal">
+              <img src="../img/paypal.png" alt="paypal">
+            </div>
+          </div>
+          <div class="payments-cont">
+            <div class="pay" id="airtm">
+              <img src="../img/airtm.png" alt="airtm">
+            </div>
+            <div class="pay" id="mony">
+              <img src="../img/mony.png" alt="mony">
+            </div>
+          </div>
+        </div>
+        <div class="payments-row">
+          <div class="payments-cont">
+            <div class="pay" id="mercantil">
+              <img src="../img/mercantil.png" alt="ercantil">
+            </div>
+            <div class="pay" id="pago-movil">
+              <img src="../img/pago-movil.png" alt="pago-movil">
+            </div>
+          </div>
+          <div class="payments-cont">
+            <div class="pay" id="zelle">
+              <img src="../img/zelle.png" alt="zelle">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="delivery">
+      <h1 class="title">Delivery</h1>
+      <table class="delivery-table">
+        <tr>
+          <th>Ruta</th>
+          <th>Zona</th>
+          <th>Precio</th>
+        </tr>
+        <tr>
+          <th>Entrega Personal</th>
+          <td>CC Casa Bera, frente a la Plaza Candelaria</td>
+          <td>No te cobramos por esto. ¡Es Gratis!</td>
+        </tr>
+        <tr>
+          <th>Centro</th>
+          <td>La Candelaria, San Bernardino, Centro de Caracas, Bellas Artes, Capitolio, Santa Rosalía</td>
+          <td>1 $</td>
+        </tr>
+        <tr>
+          <th>Este</th>
+          <td>Plaza Venezuela, Sabana Grande, Chacaíto y alrededores</td>
+          <td>2 $</td>
+        </tr>
+        <tr>
+          <th>Afueras</th>
+          <td>Parroquias Restantes</td>
+          <td>3 $</td>
+        </tr>
+        <tr>
+          <th>Lejanías</th>
+          <td>El Hatillo, Los Naranjos, La Tinidad, Macaracuay</td>
+          <td>4 $</td>
+        </tr>
+        <tr>
+          <th>Interior del País</th>
+          <td>Tú escojes la empresa de envíos que más te guste 
+          ¡Nos adaptamos a tí!</td>
+          <td>Dependerá del transportista
+            (Se envía cobro a destino)</td>
+        </tr>
+      </table>
+    </div>
   </div>
   <footer>
     <nav class="social-bar">
